forbidden-sysctls/podfile-deny-forbidden-blacklist-sysctls.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pause-forbidden-sysctls
  labels:
    app: pause-forbidden-sysctls
spec:
  containers:
  - name: pause
    image: k8s.gcr.io/pause
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "1"
